tests/miniJava/neg/004401_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] class java { } java ( ) { return 0 ; } }
